# jamjet

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo-unsafe-tool-call-marketing.tape  demo-unsafe-tool-call.tape  glama.json  justfile
runtime/: Cargo.toml  Cross.toml  README.md
runtime/agents/: Cargo.toml
runtime/agents/src/: card.rs  lib.rs  lifecycle.rs  memory_registry.rs  registry.rs  sqlite_registry.rs
runtime/api/: Cargo.toml
runtime/api/src/: approvals.rs  auth.rs  config.rs  cron.rs  error.rs  lib.rs  main.rs  mcp_bridge.rs  oauth.rs  routes.rs  secrets.rs  state.rs  static_files.rs
runtime/api/tests/: approval_api.rs  approval_e2e.rs  artifact_api.rs  artifact_resolve.rs  audit_emit.rs  cron_store_api.rs  execution_e2e.rs  java_tool_roundtrip.rs  work_item_genai.rs  workflow_validation.rs
runtime/api/tests/fixtures/: fleet_researcher_ir.json  hello_agent_ir.json
runtime/audit/: Cargo.toml
runtime/audit/src/: backend.rs  chain.rs  enricher.rs  entry.rs  lib.rs  noop.rs  signer.rs  sqlite.rs
runtime/audit/tests/: chain.rs  compliance_audit.rs
runtime/core/: Cargo.toml
runtime/core/src/: agent_tool.rs  condition.rs  coordinator.rs  error.rs  lib.rs  node.rs  retry.rs  timeout.rs  workflow.rs
runtime/engram/: Cargo.toml  README.md
runtime/engram-server/: Cargo.toml  Dockerfile  README.md  server.json
runtime/engram-server/src/: config.rs  handlers.rs  lib.rs  main.rs  mcp.rs  rest.rs
runtime/engram-server/tests/: mcp_test.rs  rest_test.rs
runtime/engram/src/: conflict.rs  consolidation.rs  context.rs  embedding.rs  embedding_ollama.rs  extract.rs  fact.rs  graph.rs  graph_postgres.rs  graph_sqlite.rs  lib.rs  llm.rs  llm_anthropic.rs  llm_command.rs  llm_google.rs  llm_ollama.rs  llm_openai.rs  llm_util.rs  memory.rs  message.rs  message_postgres.rs  message_sqlite.rs  pipeline.rs  rerank.rs  retrieve.rs  scope.rs  spreading.rs  store.rs  store_postgres.rs  store_sqlite.rs  temporal_parser.rs  vector.rs  vector_embedded.rs
runtime/engram/tests/: conflict_test.rs  consolidation_test.rs  context_test.rs  embedding_test.rs  fact_store_test.rs  graph_store_test.rs  keyword_test.rs  llm_test.rs  memory_consolidation_test.rs  memory_context_test.rs  memory_integration_test.rs  memory_test.rs  pipeline_test.rs  retrieve_test.rs  vector_store_test.rs
runtime/ir/: Cargo.toml
runtime/ir/src/: error.rs  lib.rs  validate.rs  workflow.rs
runtime/models/: Cargo.toml
runtime/models/src/: adapter.rs  anthropic.rs  google.rs  lib.rs  ollama.rs  openai.rs  registry.rs  sidecar.rs
runtime/policy/: Cargo.toml
runtime/policy/src/: autonomy.rs  engine.rs  lib.rs  redaction.rs
runtime/policy/tests/: healthcare_workflow.rs  tenant_policy.rs  trading_agent_autonomy.rs
runtime/protocols/: Cargo.toml
runtime/protocols/a2a/: Cargo.toml
runtime/protocols/a2a/src/: adapter.rs  client.rs  federation.rs  lib.rs  server.rs  types.rs
runtime/protocols/mcp/: Cargo.toml
runtime/protocols/mcp/src/: adapter.rs  client.rs  lib.rs  pool.rs  server.rs  tests.rs  transport.rs  types.rs
runtime/protocols/src/: anp.rs  failure.rs  lib.rs  registry.rs
runtime/scheduler/: Cargo.toml
runtime/scheduler/src/: lib.rs  projector.rs  runner.rs  strategy_bridge.rs
runtime/state/: Cargo.toml
runtime/state/migrations/: 0001_initial.sql  0002_production.sql  0003_tenant_isolation.sql  0004_lease_fence.sql  0005_snapshot_materialized.sql  0006_tool_effects.sql  0007_segment_links.sql  0008_projector.sql  0009_proj_approvals_pending_fields.sql  0010_artifacts.sql
runtime/state/src/: approvals.rs  artifact.rs  backend.rs  budget.rs  event.rs  hashing.rs  lib.rs  materializer.rs  memory.rs  segment.rs  snapshot.rs  sqlite.rs  tenant.rs  tenant_scoped.rs
runtime/state/tests/: artifacts.rs  commit_turn.rs  coordinator_events.rs  durability.rs  fencing.rs  idempotency.rs  memory_backend.rs  park.rs  projector.rs  research_budget.rs  segment.rs  tenant_isolation.rs
runtime/telemetry/: Cargo.toml
runtime/telemetry/src/: lib.rs
runtime/timers/: Cargo.toml
runtime/timers/src/: lib.rs
runtime/workers/: Cargo.toml
runtime/workers/src/: executor.rs  heartbeat.rs  lib.rs  pool.rs  worker.rs
runtime/workers/src/executors/: a2a_task.rs  agent_discovery.rs  agent_tool.rs  condition_node.rs  coordinator.rs  eval.rs  mcp_tool.rs  mod.rs  model_node.rs
runtime/workers/tests/: sidecar_e2e.rs
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/examples/python/: 01-hello-agent.py  02-stateless-agent.py  03-memory-recall.py  04-crash-recovery.py  05-strategy-agent.py
sdk/python/jamjet/: __init__.py  __main__.py  agent_tool.py  client.py  entry.py  gate.py  testing.py
sdk/python/jamjet/adk/: __init__.py
sdk/python/jamjet/agents/: __init__.py  agent.py  artifacts.py  audit.py  governance.py  receipts.py  session.py  task.py  tool_runtime.py
sdk/python/jamjet/anthropic_agent/: __init__.py
sdk/python/jamjet/cli/: _demo_agent.py  _demo_audit.py  demo.py  main.py  (+1 more)
sdk/python/tests/: conftest.py  team_fakes.py  test_agent.py  test_agent_deploy.py  test_agent_durable_loop_parity.py  test_agent_ir.py  test_agent_memory.py  test_agent_receipts.py  test_agent_run_durable.py  test_agent_session.py  test_agent_tool.py  test_approvals.py  test_artifacts.py  test_audit_v1_schema.py  test_audit_verify.py  test_auto_expansion.py  test_cli_create.py  test_cli_demo.py  test_cli_deploy.py  test_cli_deploy_runtime.py  test_cli_dev.py  test_cli_json_output.py  test_cli_protocol_traces.py  test_cloud_models.py  test_cloud_policy.py  test_cloud_replay.py  test_compile_returns_agent_spec.py  test_coordinator_strategy.py  test_delegation_failure.py  test_deploy_redirect.py  test_deploy_resolver.py  test_durable_cache.py  test_durable_context.py  test_durable_decorator.py  test_durable_keys.py  test_durable_parity.py  test_durable_shim_adk.py  test_durable_shim_anthropic.py  test_durable_shim_crewai.py  test_durable_shim_langchain.py  (+41 more)
(+509 files in other folders)
