[workspace]
resolver = "2"
members = [
    "core",
    "ir",
    "models",
    "scheduler",
    "state",
    "workers",
    "api",
    "telemetry",
    "timers",
    "policy",
    "agents",
    "protocols",
    "protocols/mcp",
    "protocols/a2a",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jamjet-labs/jamjet"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# HTTP / gRPC
axum = { version = "0.7", features = ["json", "macros"] }
tonic = "0.11"
hyper = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Tracing / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"

# Config
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Misc
futures = "0.3"
bytes = "1"
pin-project = "1"

# Crypto
sha2 = "0.10"
rand = "0.8"
