[package]
name = "jamjet-api"
description = "JamJet REST API server — control plane for workflow management"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jamjet-server"
path = "src/main.rs"

[dependencies]
jamjet-core = { path = "../core" }
jamjet-ir = { path = "../ir" }
jamjet-state = { path = "../state" }
jamjet-agents = { path = "../agents" }
jamjet-scheduler = { path = "../scheduler" }
jamjet-protocols = { path = "../protocols" }
jamjet-mcp = { path = "../protocols/mcp" }
jamjet-a2a = { path = "../protocols/a2a" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
