[package]
name = "jamjet-api"
description = "JamJet REST API server — control plane for workflow management"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jamjet-server"
path = "src/main.rs"

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.0" }
jamjet-ir = { path = "../ir", version = "=0.3.0" }
jamjet-state = { path = "../state", version = "=0.3.0" }
jamjet-agents = { path = "../agents", version = "=0.3.0" }
jamjet-audit = { path = "../audit", version = "=0.3.0" }
jamjet-scheduler = { path = "../scheduler", version = "=0.3.0" }
jamjet-protocols = { path = "../protocols", version = "=0.3.0" }
jamjet-mcp = { path = "../protocols/mcp", version = "=0.3.0" }
jamjet-a2a-proto = { path = "../protocols/a2a", version = "=0.3.0" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
