[package]
name = "jamjet-api"
description = "JamJet REST API server — control plane for workflow management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "jamjet-server"
path = "src/main.rs"

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.2" }
jamjet-ir = { path = "../ir", version = "=0.3.2" }
jamjet-state = { path = "../state", version = "=0.3.2" }
jamjet-agents = { path = "../agents", version = "=0.3.2" }
jamjet-audit = { path = "../audit", version = "=0.3.2" }
jamjet-scheduler = { path = "../scheduler", version = "=0.3.2" }
jamjet-protocols = { path = "../protocols", version = "=0.3.2" }
jamjet-mcp = { path = "../protocols/mcp", version = "=0.3.2" }
jamjet-a2a-proto = { path = "../protocols/a2a", version = "=0.3.2" }
jamjet-worker = { path = "../workers", version = "=0.3.2" }
jamjet-models = { path = "../models", version = "=0.3.2" }
jamjet-timers = { path = "../timers", version = "=0.3.2" }
jamjet-telemetry = { path = "../telemetry", version = "=0.3.2" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
