[package]
name = "jamjet-engram-server"
description = "Engram MCP server — memory layer for AI agents. MCP stdio + REST API."
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["agent", "memory", "mcp", "llm", "rest-api"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "engram"
path = "src/main.rs"

[lib]
name = "engram_server"
path = "src/lib.rs"

[dependencies]
engram = { path = "../engram", package = "jamjet-engram", version = "0.5.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hyper = { workspace = true }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
