[package]
name = "jamjet-engram"
description = "Engram — durable memory layer for AI agents. Temporal knowledge graph, semantic search, and MCP-native tools."
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["agent", "memory", "knowledge-graph", "mcp", "llm"]
categories = ["development-tools", "asynchronous"]

[lib]
name = "engram"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
# `tokio::process` + async I/O are needed by CommandLlmClient.
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
regex = "1"
ort = { version = "2.0.0-rc.12", optional = true }

[features]
default = []
rerank = ["dep:ort"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
