[package]
name = "jamjet-models"
description = "JamJet model adapter layer — unified interface for LLM providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jamjet-core = { path = "../core" }
jamjet-telemetry = { path = "../telemetry" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
