[package]
name = "jamjet-models"
description = "JamJet model adapter layer — unified interface for LLM providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.0" }
jamjet-telemetry = { path = "../telemetry", version = "=0.3.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
