[package]
name = "jamjet-policy"
description = "JamJet policy engine — tool blocking, approval requirements, model allowlists"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jamjet-core = { path = "../core" }
jamjet-ir = { path = "../ir" }
jamjet-agents = { path = "../agents" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
sha2 = "0.10"
