[package]
name = "jamjet-policy"
description = "JamJet policy engine — tool blocking, approval requirements, model allowlists"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.1" }
jamjet-ir = { path = "../ir", version = "=0.3.1" }
jamjet-agents = { path = "../agents", version = "=0.3.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
sha2 = "0.10"
