[package]
name = "jamjet-scheduler"
description = "JamJet scheduler — runnable node detection, queue dispatch, lease management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.0" }
jamjet-ir = { path = "../ir", version = "=0.3.0" }
jamjet-state = { path = "../state", version = "=0.3.0" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
