[package]
name = "jamjet-state"
description = "JamJet durable state — event log, snapshots, SQLite and Postgres backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.0" }
jamjet-ir = { path = "../ir", version = "=0.3.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
