[package]
name = "jamjet-timers"
description = "JamJet durable timers — Postgres-backed timer store and cron scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.1" }
jamjet-state = { path = "../state", version = "=0.3.1" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
