[package]
name = "jamjet-worker"
description = "JamJet worker process — task execution, heartbeat, lease renewal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jamjet-core = { path = "../core" }
jamjet-ir = { path = "../ir" }
jamjet-models = { path = "../models" }
jamjet-state = { path = "../state" }
jamjet-mcp = { path = "../protocols/mcp" }
jamjet-a2a = { path = "../protocols/a2a" }
jamjet-telemetry = { path = "../telemetry" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
