[package]
name = "jamjet-worker"
description = "JamJet worker process — task execution, heartbeat, lease renewal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jamjet-core = { path = "../core", version = "=0.3.0" }
jamjet-ir = { path = "../ir", version = "=0.3.0" }
jamjet-models = { path = "../models", version = "=0.3.0" }
jamjet-state = { path = "../state", version = "=0.3.0" }
jamjet-policy = { path = "../policy", version = "=0.3.0" }
jamjet-agents = { path = "../agents", version = "=0.3.0" }
jamjet-mcp = { path = "../protocols/mcp", version = "=0.3.0" }
jamjet-a2a-proto = { path = "../protocols/a2a", version = "=0.3.0" }
jamjet-telemetry = { path = "../telemetry", version = "=0.3.0" }
jamjet-scheduler = { path = "../scheduler", version = "=0.3.0" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
wiremock = "0.5"
tokio = { workspace = true, features = ["test-util"] }
