[build-system]
# Pure Python wheel — no Rust extension.
# The jamjet-server binary is distributed as a GitHub Release asset and
# auto-downloaded on first `jamjet dev` via _find_server_binary() in cli/main.py.
#
# Local development:
#   pip install -e ".[dev]"
#
# Build wheel:
#   python -m build --wheel
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamjet"
version = "0.1.0"
description = "JamJet Python SDK — agent-native workflow authoring and CLI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
jamjet = "jamjet.cli.main:app"


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
