[build-system]
# Pure Python wheel — no Rust extension.
# The jamjet-server binary is distributed as a GitHub Release asset and
# auto-downloaded on first `jamjet dev` via _find_server_binary() in cli/main.py.
#
# Local development:
#   pip install -e ".[dev]"
#
# Build wheel:
#   python -m build --wheel
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jamjet"
version = "0.7.0"
description = "JamJet Python SDK — agent-native workflow authoring, CLI, and JamJet Cloud governance (jamjet.cloud submodule)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "workflow", "mcp", "a2a", "llm", "rust", "durable", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
    "pyyaml>=6.0",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://jamjet.dev"
Documentation = "https://jamjet.dev"
Repository = "https://github.com/jamjet-labs/jamjet"
Changelog = "https://github.com/jamjet-labs/jamjet/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/jamjet-labs/jamjet/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "syrupy>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "openai>=1.0",
    "scipy>=1.11",
]
# Optional extras for the `jamjet.cloud` governance submodule (introduced in 0.6.0).
# `pip install jamjet[openai]` enables auto-instrumentation of OpenAI calls;
# `pip install jamjet[anthropic]` for Anthropic; `pip install jamjet[cloud-all]` for both.
openai = ["openai>=2"]
anthropic = ["anthropic>=0.40"]
cloud-all = ["openai>=2", "anthropic>=0.40"]
# Optional extras for the `jamjet.durable` framework shims (introduced in 0.7.0).
# Each enables a thin durable_run() context manager that bridges the framework's
# native run identity to JamJet's @durable idempotency cache.
langchain = ["langchain>=0.3,<1.0"]
crewai = ["crewai>=0.70"]
adk = ["google-adk>=0.1"]
anthropic-agent = ["anthropic>=0.40"]
openai-agents = ["openai-agents>=0.1"]

[project.scripts]
jamjet = "jamjet.cli.main:app"
jamjet-cloud = "jamjet.cloud.cli:main"


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# JSON-heavy code legitimately returns Any from parsed responses.
warn_return_any = false
# bare dict/list are common in JSON contexts; disabling generics check.
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
