[package]
name = "jamjet-a2a"
description = "JamJet A2A client and server — Agent-to-Agent protocol support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jamjet-protocols = { path = ".." }
jamjet-agents = { path = "../../agents" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
