[package]
name = "jamjet-mcp"
description = "JamJet MCP client and server — Model Context Protocol support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
jamjet-protocols = { path = "..", version = "=0.3.0" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
